# RAG_mlflow_agent

./: .dockerignore  .env.example  README.md  check_mlflow_version.py  docker-compose.yml  init_vector_db.py  mlflow_deploy.py  mlflow_run.py  mlflow_start.py  pyproject.toml  questions.json  test-questions.csv  test_mlflow_integration.py  test_questions_script.py  test_results.csv  test_single_query.py
artifacts/chroma_index/: chroma.sqlite3
docker/: Dockerfile
mlruns/.trash/976493669752834996/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/aeb2f558cc754963a9155b90556e02a5/: meta.yaml
mlruns/864126803210018887/: meta.yaml
mlruns/864126803210018887/0b04668753f94a7db4b083107af328a7/: meta.yaml
mlruns/864126803210018887/0c32e56289204ef2961c3efac471c8f7/: meta.yaml
mlruns/864126803210018887/108a0242a0d043f2b35f29dfcae1b4cc/: meta.yaml
mlruns/864126803210018887/17243a77fead42d79211d8e3d771f12b/: meta.yaml
mlruns/864126803210018887/1e9c47ee72964b6d9bdd7522a16e3a54/: meta.yaml
mlruns/864126803210018887/1eea69dceb8a42959d1613a19c84e34d/: meta.yaml
mlruns/864126803210018887/1f3df594a88a4aeeb54cbb99452754d6/: meta.yaml
mlruns/864126803210018887/293f45c513844d7eaa7484330c2896f7/: meta.yaml
mlruns/864126803210018887/2b7409f0c5b94f2ca75d46629a5c04fb/: meta.yaml
mlruns/models/test/: meta.yaml
scripts/: deploy_model.py
src/: config.py
src/llm/: openai_client.py
src/models/: __init__.py  mlflow_rag_model.py  schemas.py
src/rag/: __init__.py  chain.py  graph.py  retriever.py
src/utils/: __init__.py  mlflow_tracker.py
(+333 files in other folders)
